--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,9 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
