--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,7 +74,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
         entryFile   : "index.js",
-        enableHermes: false
+        enableHermes: true
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -94,7 +94,7 @@ def enableSeparateBuildPerCPUArchitecture = false
  */
 def enableProguardInReleaseBuilds = false
 
-def enableHermes = project.ext.react.get("enableHermes", false)
+def enableHermes = project.ext.react.get("enableHermes", true)
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -117,9 +117,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 6
         versionName "0.0.4"
-        ndk {
-            abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
-        }
+        ndk.abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
     }
     signingConfigs {
         release {
