--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Do not push keystore
+android/app/wavect.keystore
+
 # OSX
 #
 .DS_Store
@@ -25,6 +28,7 @@ project.xcworkspace
 # Android/IntelliJ
 #
 build/
+android/app/build/
 .idea
 .gradle
 local.properties
