--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,8 +131,8 @@ android {
         applicationId "com.wavect"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 8
-        versionName "0.0.6"
+        versionCode 10
+        versionName "0.0.8"
     }
     splits {
         abi {
@@ -149,16 +149,25 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release { // do not push keystore! (is in .gitignore)
+            storeFile file('wavect.keystore')
+            storePassword 'A0SXLc724UukbVxttEu989c1zgp8Pl4GwGsCdquPbEcgYtnRpu'
+            keyAlias 'android-release-key'
+            keyPassword 'uGSXe9JBy3hIqiAdEApWKXVUG615ginFoBMT7Ma_aLF0PWjDph'
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            debuggable true
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+            debuggable false
             minifyEnabled enableProguardInReleaseBuilds
+            shrinkResources enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
