--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "react-native-elements": "^1.1.0",
         "react-native-formik": "^1.7.6",
         "react-native-gesture-handler": "^1.3.0",
+        "react-native-image-picker": "^1.0.1",
+        "react-native-share": "^2.0.0",
         "react-native-splash-screen": "^3.2.0",
         "react-native-vector-icons": "^6.4.2",
         "react-navigation": "^3.11.1",
@@ -26,6 +28,7 @@
         "@types/jest": "^24.0.5",
         "@types/react": "^16.8.3",
         "@types/react-native": "^0.60.2",
+        "@types/react-native-share": "^1.1.2",
         "@types/react-navigation": "^3.0.7",
         "@types/react-test-renderer": "^16.8.1",
         "babel-jest": "^24.8.0",
