--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "@react-native-community/async-storage": "^1.5.0",
         "react": "16.8.6",
         "react-native": "0.60.4",
+        "react-native-cache": "^1.1.8",
         "react-native-color-matrix-image-filters": "^5.1.5",
         "react-native-elements": "^1.1.0",
+        "react-native-fast-image": "^7.0.2",
         "react-native-formik": "^1.7.6",
         "react-native-gesture-handler": "^1.3.0",
         "react-native-splash-screen": "^3.2.0",
