--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "dependencies": {
         "@babel/runtime": "^7.0.0",
         "@react-native-community/async-storage": "^1.5.0",
+        "@react-native-firebase/analytics": "^0.1.2",
+        "@react-native-firebase/app": "^0.1.2",
+        "@react-native-firebase/crashlytics": "^0.1.2",
         "react": "16.8.6",
         "react-native": "0.60.4",
         "react-native-cache": "^1.1.8",
         "react-native-color-matrix-image-filters": "^5.1.5",
         "react-native-elements": "^1.1.0",
         "react-native-fast-image": "^7.0.2",
-        "react-native-firebase": "~5.5.6",
         "react-native-formik": "^1.7.6",
         "react-native-gesture-handler": "^1.3.0",
         "react-native-image-picker": "^1.0.1",
