--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-native-share": "^2.0.0",
         "react-native-splash-screen": "^3.2.0",
         "react-native-vector-icons": "^6.4.2",
+        "react-native-version-number": "^0.3.6",
         "react-navigation": "^3.11.1",
         "react-navigation-props-mapper": "^1.0.1"
     },
