--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -219,3 +219,8 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric' // crashlytics firebase
+
+crashlytics {
+    enableNdk true
+}
