--- a/package.json
+++ b/package.json
@@ -9,51 +9,51 @@
         "postinstall": "npx jetify"
     },
     "dependencies": {
-        "@babel/runtime": "^7.0.0",
-        "@react-native-community/async-storage": "^1.5.0",
+        "@babel/runtime": "^7.5.5",
+        "@react-native-community/async-storage": "^1.6.1",
         "@react-native-firebase/analytics": "^0.1.2",
         "@react-native-firebase/app": "^0.1.2",
         "@react-native-firebase/crashlytics": "^0.1.2",
         "react": "16.8.6",
-        "react-native": "0.60.4",
+        "react-native": "^0.60.4",
         "react-native-cache": "^1.1.8",
-        "react-native-color-matrix-image-filters": "^5.1.5",
+        "react-native-color-matrix-image-filters": "^5.2.0",
         "react-native-elements": "^1.1.0",
         "react-native-fast-image": "^7.0.2",
-        "react-native-formik": "^1.7.6",
+        "react-native-formik": "^1.7.7",
         "react-native-gesture-handler": "^1.3.0",
-        "react-native-image-picker": "^1.0.1",
+        "react-native-image-picker": "^1.0.2",
         "react-native-share": "^2.0.0",
         "react-native-splash-screen": "^3.2.0",
-        "react-native-vector-icons": "^6.4.2",
+        "react-native-vector-icons": "^6.6.0",
         "react-native-version-number": "^0.3.6",
         "react-navigation": "^3.11.1",
         "react-navigation-props-mapper": "^1.0.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.5.4",
-        "@types/jest": "^24.0.5",
-        "@types/react": "^16.8.3",
-        "@types/react-native": "^0.60.2",
+        "@babel/core": "^7.5.5",
+        "@types/jest": "^24.0.17",
+        "@types/react": "^16.8.24",
+        "@types/react-native": "^0.60.3",
         "@types/react-native-share": "^1.1.2",
-        "@types/react-navigation": "^3.0.7",
-        "@types/react-test-renderer": "^16.8.1",
+        "@types/react-navigation": "^3.0.8",
+        "@types/react-test-renderer": "^16.8.3",
         "babel-jest": "^24.8.0",
-        "husky": "^1.3.1",
+        "husky": "^3.0.2",
         "jest": "^24.8.0",
         "metro-react-native-babel-preset": "^0.55.0",
-        "nps": "^5.9.3",
-        "prettier": "^1.16.4",
+        "nps": "^5.9.5",
+        "prettier": "^1.18.2",
         "react-native-version": "^3.1.0",
         "react-test-renderer": "16.8.6",
         "reactotron-react-native": "^3.6.4",
-        "ts-jest": "^23.10.5",
-        "tslint": "^5.12.1",
+        "ts-jest": "^24.0.2",
+        "tslint": "^5.18.0",
         "tslint-config-prettier": "^1.18.0",
-        "tslint-consistent-codestyle": "^1.15.0",
+        "tslint-consistent-codestyle": "^1.15.1",
         "tslint-eslint-rules": "^5.4.0",
-        "tslint-react": "^3.6.0",
-        "tslint-react-native": "^0.0.6",
+        "tslint-react": "^4.0.0",
+        "tslint-react-native": "^0.0.7",
         "typescript": "^3.5.3"
     },
     "jest": {
