--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@react-native-firebase/analytics": "^0.1.2",
         "@react-native-firebase/app": "^0.1.2",
         "@react-native-firebase/crashlytics": "^0.1.2",
+        "i18n-js": "latest",
+        "lodash.memoize": "latest",
         "react": "16.8.6",
         "react-native": "^0.60.4",
         "react-native-cache": "^1.1.8",
@@ -23,6 +25,7 @@
         "react-native-formik": "^1.7.7",
         "react-native-gesture-handler": "^1.3.0",
         "react-native-image-picker": "^1.0.2",
+        "react-native-localize": "latest",
         "react-native-share": "^2.0.0",
         "react-native-splash-screen": "^3.2.0",
         "react-native-vector-icons": "^6.6.0",
@@ -32,7 +35,9 @@
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
+        "@types/i18n-js": "^3.0.1",
         "@types/jest": "^24.0.17",
+        "@types/lodash.memoize": "^4.1.6",
         "@types/react": "^16.8.24",
         "@types/react-native": "^0.60.3",
         "@types/react-native-share": "^1.1.2",
