--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "@react-native-firebase/analytics": "^0.1.2",
         "@react-native-firebase/app": "^0.1.2",
         "@react-native-firebase/crashlytics": "^0.1.2",
-        "i18n-js": "latest",
-        "lodash.memoize": "latest",
+        "i18n-js": "^3.3.0",
+        "lodash.memoize": "^4.1.2",
         "react": "16.8.6",
         "react-native": "^0.60.4",
         "react-native-cache": "^1.1.8",
@@ -62,7 +62,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "yarn start prettier"
+            "pre-commit": "yarn start genLangSchema && yarn start prettier"
         }
     }
 }
