--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "dependencies": {
         "@babel/runtime": "^7.5.5",
         "@react-native-community/async-storage": "^1.6.1",
-        "@react-native-firebase/analytics": "^0.1.2",
-        "@react-native-firebase/app": "^0.1.2",
-        "@react-native-firebase/crashlytics": "^0.1.2",
+        "@react-native-firebase/analytics": "^0.2.3",
+        "@react-native-firebase/app": "^0.2.3",
+        "@react-native-firebase/crashlytics": "^0.2.3",
         "i18n-js": "^3.3.0",
         "lodash.memoize": "^4.1.2",
-        "react": "16.8.6",
-        "react-native": "^0.60.4",
+        "react": "16.9.0",
+        "react-native": "^0.60.5",
         "react-native-cache": "^1.1.8",
         "react-native-color-matrix-image-filters": "^5.2.0",
         "react-native-elements": "^1.1.0",
@@ -25,7 +25,7 @@
         "react-native-formik": "^1.7.7",
         "react-native-gesture-handler": "^1.3.0",
         "react-native-image-picker": "^1.0.2",
-        "react-native-localize": "latest",
+        "react-native-localize": "^1.1.4",
         "react-native-share": "^2.0.0",
         "react-native-splash-screen": "^3.2.0",
         "react-native-vector-icons": "^6.6.0",
