--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@types/react": "^16.8.24",
         "@types/react-native": "^0.60.3",
         "@types/react-native-share": "^1.1.2",
+        "@types/react-native-vector-icons": "^6.4.1",
         "@types/react-navigation": "^3.0.8",
         "@types/react-test-renderer": "^16.8.3",
         "babel-jest": "^24.8.0",
