--- a/package.json
+++ b/package.json
@@ -9,38 +9,41 @@
         "postinstall": "npx jetify"
     },
     "dependencies": {
-        "@babel/runtime": "^7.6.0",
+        "@babel/runtime": "^7.6.2",
         "@react-native-community/async-storage": "^1.6.1",
-        "@react-native-firebase/analytics": "^0.3.0",
-        "@react-native-firebase/app": "^0.3.0",
-        "@react-native-firebase/crashlytics": "^0.3.0",
+        "@react-native-firebase/analytics": "^0.5.4",
+        "@react-native-firebase/app": "^0.5.4",
+        "@react-native-firebase/crashlytics": "^0.5.4",
         "i18n-js": "^3.3.0",
         "lodash.memoize": "^4.1.2",
         "react": "16.9.0",
         "react-native": "^0.60.5",
+        "react-native-reanimated": "^1.2.0",
         "react-native-cache": "^1.1.8",
         "react-native-color-matrix-image-filters": "^5.2.0",
-        "react-native-elements": "^1.2.0",
+        "react-native-elements": "^1.2.1",
         "react-native-fast-image": "^7.0.2",
         "react-native-formik": "^1.7.7",
         "react-native-gesture-handler": "^1.4.1",
         "react-native-image-picker": "^1.1.0",
-        "react-native-localize": "^1.2.0",
-        "react-native-modal": "^11.3.1",
+        "react-native-localize": "^1.2.1",
+        "react-native-modal": "^11.4.0",
         "react-native-share": "^2.0.0",
         "react-native-splash-screen": "^3.2.0",
         "react-native-vector-icons": "^6.6.0",
         "react-native-version-number": "^0.3.6",
-        "react-navigation": "^4.0.4",
-        "react-navigation-props-mapper": "^1.0.1"
+        "react-navigation": "^4.0.8",
+        "react-navigation-props-mapper": "^1.0.1",
+        "react-navigation-stack": "^1.9.0",
+        "react-navigation-tabs": "^2.5.5"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.0",
+        "@babel/core": "^7.6.2",
         "@types/i18n-js": "^3.0.1",
         "@types/jest": "^24.0.18",
         "@types/lodash.memoize": "^4.1.6",
         "@types/react": "^16.9.2",
-        "@types/react-native": "^0.60.13",
+        "@types/react-native": "^0.60.15",
         "@types/react-native-share": "^1.1.3",
         "@types/react-native-vector-icons": "^6.4.2",
         "@types/react-navigation": "^3.0.8",
@@ -52,14 +55,14 @@
         "nps": "^5.9.8",
         "prettier": "^1.18.2",
         "react-native-testing-library": "^1.11.1",
-        "react-native-version": "^3.1.0",
+        "react-native-version": "^3.2.0",
         "react-test-renderer": "16.9.0",
-        "reactotron-react-native": "^3.6.5",
-        "ts-jest": "^24.0.2",
+        "reactotron-react-native": "^4.0.1",
+        "ts-jest": "^24.1.0",
         "tslint": "^5.20.0",
         "tslint-config-prettier": "^1.18.0",
         "tslint-eslint-rules": "^5.4.0",
-        "tslint-react": "^4.0.0",
+        "tslint-react": "^4.1.0",
         "tslint-react-native": "^0.0.7"
     },
     "husky": {
