--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,7 +77,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     entryFile: "index.js",
-    enableHermes: true,  // clean and rebuild if changing (WORKS!)
+    enableHermes: false,  // clean and rebuild if changing
     hermesCommand: "../../node_modules/hermes-engine/%OS-BIN%/hermes", //TODO inserted that line, but somehow not found in .AAB build!
 ]
 
@@ -91,7 +91,7 @@ apply from: "../../node_modules/react-native/react.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = false // might be irrelevant as we already make builds for every architecture as far as I know
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
@@ -202,7 +202,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
-	implementation 'com.google.firebase:firebase-core:17.0.1'
+	implementation 'com.google.firebase:firebase-core:17.2.0'
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
