--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "react-native": "^0.61.1",
         "react-native-cache": "^1.1.8",
         "react-native-color-matrix-image-filters": "^5.2.0",
-        "react-native-elements": "^1.2.1",
+        "react-native-elements": "^1.2.3",
         "react-native-fast-image": "^7.0.2",
         "react-native-formik": "^1.7.7",
         "react-native-gesture-handler": "^1.4.1",
@@ -28,6 +28,7 @@
         "react-native-localize": "^1.2.1",
         "react-native-modal": "^11.4.0",
         "react-native-reanimated": "^1.3.0",
+        "react-native-screens": "^2.0.0-alpha.3",
         "react-native-share": "^2.0.0",
         "react-native-splash-screen": "^3.2.0",
         "react-native-vector-icons": "^6.6.0",
