--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,8 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 target 'wavect' do
   # Pods for wavect
   pod 'React', :path => '../node_modules/react-native/'
-  pod 'React-Core', :path => '../node_modules/react-native/React'
+  pod 'React-Core', :path => '../node_modules/react-native'
+  # pod 'React-Core', :path => '../node_modules/react-native/React'
   pod 'React-DevSupport', :path => '../node_modules/react-native/React'
   pod 'React-fishhook', :path => '../node_modules/react-native/Libraries/fishhook'
   pod 'React-RCTActionSheet', :path => '../node_modules/react-native/Libraries/ActionSheetIOS'
