--- a/app.json
+++ b/app.json
@@ -1,19 +1,22 @@
 {
   "expo": {
-    "name": "Blank Template (TypeScript)",
-    "slug": "s_f_mobile",
-    "privacy": "public",
+    "name": "Wavect",
+    "description": "Do sth. good and win prizes based on your interests!",
+    "slug": "wavect",
+    "privacy": "unlisted",
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
       "android",
       "web"
     ],
-    "version": "1.0.0",
+    "version": "0.0.1",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "owner": "Wavect, Riedl Kevin",
+    "backgroundColor": "#fff",
+    "icon": "./src/assets/ic_launcher.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
