tidied up some code, resolved bg image 'bug' -> 404

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "target": "ES5",
     "paths": { "*": ["types/*"] },
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
