--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.2",
-    "expo": "^36.0.0",
-    "expo-font": "~8.0.0",
-    "expo-image-picker": "~8.0.1",
-    "expo-localization": "~8.0.0",
-    "expo-permissions": "~8.0.0",
-    "expo-secure-store": "~8.0.0",
-    "expo-sharing": "~8.0.0",
+    "expo": "^40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-localization": "~9.1.0",
+    "expo-permissions": "~10.0.0",
+    "expo-secure-store": "~9.3.0",
+    "expo-sharing": "~8.5.0",
     "i18n-js": "^3.5.1",
     "lodash.memoize": "^4.1.2",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-cache": "^1.1.8",
     "react-native-elements": "^1.2.3",
     "react-native-fa-icons": "^4.1.1",
     "react-native-formik": "^1.7.7",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.15.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.4.1",
@@ -38,18 +39,18 @@
     "react-navigation-tabs": "^2.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "~7.9.0",
     "@types/i18n-js": "^3.0.1",
     "@types/jest": "^24.0.18",
     "@types/lodash.memoize": "^4.1.6",
-    "@types/react": "^16.9.0",
-    "@types/react-native": "^0.60.15",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "@types/react-native-share": "^1.1.3",
     "@types/react-native-vector-icons": "^6.4.2",
     "@types/react-navigation": "^3.0.8",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.9.0",
-    "babel-preset-expo": "^8.0.0",
+    "babel-preset-expo": "8.3.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "nps": "^5.9.8",
